# bevy_godot4

./: Cargo.toml  README.md
examples/simple/: Cargo.toml
examples/simple/godot/: icon.svg.import  project.godot
examples/simple/src/: lib.rs
proc_macros/src/: lib.rs
src/: app.rs  scene.rs  scene_tree.rs
